--- a/foodie/src/sass/components/_auth.scss
+++ b/foodie/src/sass/components/_auth.scss
@@ -10,6 +10,11 @@
         margin-top: 4rem;
         margin-bottom: 1rem;
 
+        @include respond(phone) {
+            font-size: 1.8rem;
+            margin-top: 2rem;
+        }
+
     }
 
     &_lead {
@@ -18,7 +23,7 @@
         margin-bottom: 2rem;
 
         @include respond(phone) {
-            font-size: 1.7rem;
+            font-size: 1.4rem;
             margin-bottom: 1rem;
         }
     }
@@ -35,6 +40,7 @@
             outline-color: $color-primary;
 
             @include respond(phone) {
+                font-size: 0.8rem;
                 height: 20%;
                 width: 90%;
                 margin-left: 10px;
@@ -56,6 +62,10 @@
             margin-bottom: 2rem;
             outline: none;
 
+            @include respond(phone) {
+                font-size: 0.6rem;
+            }
+
             &:hover {
                 color: $color-white;
                 background-color: $color-primary;
@@ -66,6 +76,10 @@
     &_authtext {
         font-size: 1.6rem;
         color: #4a4a4a;
+
+        @include respond(phone) {
+            font-size: 0.8rem;
+        }
 
         &_link {
             text-decoration: none;
