--- a/foodie/src/sass/containers/_menu.scss
+++ b/foodie/src/sass/containers/_menu.scss
@@ -9,6 +9,13 @@
     border-radius: 10%;
     box-shadow: 10px 10px rgba(248, 248, 15, 0.384);
 
+    &_bod {
+        @include respond(phone) {
+            max-width: 30em;
+            max-height: 35em;
+        }
+    }
+
 
     &_img {
         height: 30vh;
@@ -110,6 +117,11 @@
             :hover {
                 background-color: $color-primary;
                 color: $color-white;
+            }
+
+            @include respond(phone) {
+                font-size: 0.8em;
+                padding: 1em;
             }
         }
 
