--- a/foodie/src/sass/abstracts/_variables.scss
+++ b/foodie/src/sass/abstracts/_variables.scss
@@ -5,8 +5,8 @@ $color-secondary: #ee3026;
 $color-black: #000;
 $color-white: #fff;
 
-$transparent-black: rgba(20, 20, 20, 0.596);
+$transparent-black: rgba(20, 20, 20, 0.664);
 $mild-color: #e55743;
 
 //font
-$default-font-size: 1.6rem;
+$default-font-size: 20px;
