--- a/foodie/src/sass/containers/_home.scss
+++ b/foodie/src/sass/containers/_home.scss
@@ -1,6 +1,6 @@
 .cars {
     height: 50% !important;
-    width: 100% !important;
+    width: 70% !important;
     object-fit: cover !important;
 
     img {
@@ -8,6 +8,7 @@
 
         @include respond(phone) {
             height: 240px;
+            width: 100%;
         }
     }
 
