--- a/foodie/src/sass/components/_auth.scss
+++ b/foodie/src/sass/components/_auth.scss
@@ -4,6 +4,10 @@
     justify-content: center;
     align-items: center;
 
+    @include respond(phone) {
+        gap: 10px;
+    }
+
     &_title {
         font-size: 4.2rem;
         color: $color-primary;
@@ -29,46 +33,61 @@
     }
 
     &_form {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        @include respond(phone) {
+            gap: 10px;
+            width: 100%;
+            padding: 20px;
+        }
         &_group {
             margin-bottom: 1rem;
 
         }
 
         &_input {
-            font-size: 1.6rem;
-            padding: 1rem 1.5rem;
+            font-size: 20px;
+            padding: 14px;
             outline-color: $color-primary;
+            width: 500px;
+            height: 66px;
+            border-radius: 8px;
 
             @include respond(phone) {
-                font-size: 0.8rem;
+                font-size: 16px;
+                padding: 12px;
                 height: 20%;
-                width: 90%;
-                margin-left: 10px;
+                width: 100%;
             }
             
         }
 
         &_button {
             font-size: 1.8rem;
+            font-weight: 600;
             padding: 0.5rem 0;
             width: 80%;
             margin-left: 10%;
             background-color: $color-white;
-            color: $color-primary;
-            border: 0.1rem solid $color-primary;
-            border-radius: 0.5rem;
+            color: $color-secondary;
+            border: 0.1rem solid $color-secondary;
+            text-shadow: 1px 1px 12px $color-primary, 1px 1px 4px $color-secondary;
+            border-radius: 10px;
             cursor: pointer;
             margin-top: 1rem;
             margin-bottom: 2rem;
             outline: none;
+            transition: transform 1s ease-in-out;
 
             @include respond(phone) {
-                font-size: 0.6rem;
+                font-size: 20px;
+                padding: 0.8rem;
             }
 
             &:hover {
-                color: $color-white;
-                background-color: $color-primary;
+                transform: scale(1.2);
             }
         }
     }
@@ -83,10 +102,14 @@
 
         &_link {
             text-decoration: none;
-            color: $color-primary;
+            color: $color-secondary;
+            cursor: pointer;
+            transition: 2s ease;
 
             &:hover {
-                color: #ccc;
+                text-shadow: 4px 4px 8px $color-secondary;
+                color: $color-secondary;
+                text-decoration: none;
             }
         }
     }
