--- a/foodie/src/sass/components/_base.scss
+++ b/foodie/src/sass/components/_base.scss
@@ -1,16 +1,23 @@
-.Base1 {
-    background-color: $color-secondary;
-    padding: 2rem 2rem;
+.base {
+    padding-top: 7rem;    
 
-    @include respond(phone) {
-        padding: 1rem 1rem;
+    &-contain{
+        background: url(../../assets/thigh-3423122_1920.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        color: $color-white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        height: 200px;
+
+        @include respond(phone) {
+            height: 140px;
+        }
     }
-}
 
-.Base2 {
-    background-color: $color-primary;
-    color: $color-secondary;
-    padding: 2.8rem 2.8rem;
 
     h1 {
         font-size: 3rem;
@@ -18,6 +25,19 @@
     }
 
     @include respond(phone) {
-        padding: 1rem 1rem;
+        h1 {
+            font-size: 2rem;
+        }
+    }
+
+    &-subtitle {
+        text-align: center;
+        padding: 0 24px;
+        font-size: 24px;
+        font-weight: 500;
+
+        @include respond(phone) {
+            font-size: 18px;
+        }
     }
 }
