--- a/foodie/src/sass/containers/_menu.scss
+++ b/foodie/src/sass/containers/_menu.scss
@@ -1,30 +1,33 @@
 .menu {
     background-color: rgba(0, 0, 0, 0.048);
     border: 1px solid $color-primary;
-    padding: 2em;
-    display: flexbox;
-    margin-left: 2em;
-    max-width: 40rem;
+    margin-left: 4rem;
+    width: 290px;
     margin-top: 3rem;
-    border-radius: 10%;
-    box-shadow: 10px 10px rgba(248, 248, 15, 0.384);
+    border-radius: 30% 30% 0 0;
+    box-shadow: 4px 4px 10px $transparent-black;
+
+    @include respond(phone) {
+        margin-left: 0;
+    }
 
     &_bod {
         @include respond(phone) {
-            max-width: 30em;
-            max-height: 35em;
+            width: auto;
+            display: flex;
+            justify-content: center;
+            padding: 20px;
         }
     }
 
 
     &_img {
         height: 30vh;
-        width: 60vh;
+        width: 100%;
+        border-radius: 30% 30% 0 0;
 
         @include respond(phone) {
             height: 200px;
-            width: 150px;
-            margin-left: 2em;
         }
     }
     
@@ -34,11 +37,9 @@
         background-color: $color-white;
 
         @include respond(phone) {
-            margin-left: 12%;
-            margin-right: 0.5%;
-            padding: 1em;
+            padding: 0.6em;
             background-color: $color-white;
-            max-height: 7rem;
+            margin-right: 0;
         }
     }
 
@@ -140,12 +141,6 @@
             }
 
         }
-    }
-
-    @include respond(phone) {
-        max-width: 20rem;
-        margin-right: 2rem;
-        margin-left: 2rem;
     }
 
 }
