--- a/foodie/src/sass/containers/_vendors.scss
+++ b/foodie/src/sass/containers/_vendors.scss
@@ -1,32 +1,37 @@
 .vendor {
-    background-color: $color-primary;
+    display: flex;
+    gap: 2rem;
     margin-top: 5em;
-    border: 1px solid $color-secondary;
-    border-left: 6px solid $color-secondary;
-    border-bottom-right-radius: 50%;
-    border-top-right-radius: 50%;
     padding: 2em;
+
+    @include respond(phone) {
+        flex-direction: column;
+        align-items: center;
+        gap: 0.4rem;
+        margin-top: 2em;
+    }
 
     &_img {
         width: 50%;
         height: 25%;
         margin-bottom: 1em;
+        border-radius: 40px;
 
         @include respond(phone) {
-            width: 60%;
-            height: 30%;
+            width: 100%;
+            height: 50%;
+            border-radius: 14px;
         }
         
     }
     
     &_det {
-        margin-right: 50%;
         padding: 1em;
         background-color: $color-white;
 
         @include respond(phone) {
             margin-right: 10%;
-            padding: 1em;
+            padding: 0.6em;
             background-color: $color-white;
         }
     }
@@ -35,6 +40,7 @@
         font-family: 'Times New Roman', Times, serif;
         font-weight: 200;
         font-size: 1.5em;
+        text-transform: capitalize;
 
         @include respond(phone) {
             font-size: 1.2em;
@@ -43,6 +49,7 @@
 
     &_loc {
         font-size: 1.5em;
+        text-transform: capitalize;
 
         @include respond(phone) {
             font-size: 1em;
@@ -50,7 +57,8 @@
     }
 
     &_desc {
-        border: 1px double rgba(255, 0, 0, 0.308);
+        border: 4px double rgba(255, 0, 0, 0.308);
+        padding: 1rem;
     }
     
 
